# Spelmotorarkitekturer

./: .gitignore  Allocator.sln  CMakeLists.txt  ResourceManagerUML.mdj  fragment.glsl  vertex.glsl
Allocator/: Allocator.vcxproj  Allocator.vcxproj.filters  Main.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
AllocatorTest/: AList.h  AllocatorTest.vcxproj  AllocatorTest.vcxproj.filters  CMakeLists.txt  LList.h  List.h  PoolAllocatorTests.cpp  PoolAllocatorTests.cpp.orig  StackAllocatorTests.cpp  StackAllocatorTestsOld.cpp  TestMain.cpp  stdafx.cpp  stdafx.h
CMake/: Findassimp.cmake
ResourceManager/: GUID.cpp  GUID.h  InstanceData.h  Logging.cpp  Model.cpp  Model.h  OBJ.h  Renderer.cpp  Renderer.h  Resource.h  bundle.stuff  bundleread.cpp  bundlewrite.cpp
ResourceManager/STUFF/: STUFF.h.gch  STUFFBundle.h
Test/: .gitignore  CMakeLists.txt  CatchXMLFileToGNUPlotData.py  PoolAllocatorTests.cpp  RunPerfTest.bat  RunPerfTest.py  Section_CatchXMLFileToGNUPlotData.py  Section_RunPerfTest.py  StackAllocatorTests.cpp  Test.vcxproj  Test.vcxproj.filters  TestMain.cpp
Test/data/: Pool- Fragment the memory.txt  Pool- Fragmented linear access.txt  Pool- Linear access.txt  Pool- Linear allocate.txt  Stand- Fragment the memory.txt  Stand- Fragmented linear access.txt  Stand- Linear access.txt  Stand- Linear allocate.txt  [Usefull].xml
Test/graphtests/: creategraph
src/Allocator/: CMakeLists.txt  DummyAllocator.cpp  DummyAllocator.h  Main.cpp  PoolAllocator.h
src/Renderer/: BaseTexture.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraEndlessRunner.cpp  CameraEndlessRunner.h  Entity.h  Image.h  Model.cpp  Model.h  OBJ.cpp  PNG.cpp  PNG.h  RawModelAssimp.cpp  RawModelAssimp.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexFormat.h  main.cpp
src/ResourceManager/: BaseTexture.h  CMakeLists.txt  FilesystemBundle.cpp  FilesystemBundle.h  GUID.cpp  OpenGL.h  RawModelAssimp.h  Resource.h  ResourceBundle.cpp  ResourceBundle.h  ResourceHandle.cpp  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  ResourceTree.h  ResourceTreeNode.cpp  ResourceTreeNode.h  TXT.h  Texture.h  bundleread.cpp  bundlewrite.cpp
src/ResourceManager/STUFF/: STUFF.h  STUFFBundle.h
src/ResourceManager/Tools/: bundleread.cpp  bundlewrite.cpp
src/STUFFGenerator/: CMakeLists.txt  bundlewrite.cpp
src/Test/: .gitignore  CMakeLists.txt  RendererTests.cpp  ResourceManagerTests.cpp  RunPerfTest.py  Section_CatchXMLFileToGNUPlotData.py  StackAllocatorTests.cpp  TestMain.cpp
src/Test/graphtests/: calcerrorbars.py  script.gnuplot
